--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "homepage": "https://PY2512.github.io/goit-js-hw-10",
     "scripts": {
         "dev": "parcel src/*.html",
-        "build": "parcel build src/*.html --public-url /goit-js-hw-10/"
+        "build": "parcel build src/*.html --public-url /goit-js-hw-10"
     },
     "repository": {
         "type": "git",
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "lodash.debounce": "^4.0.8",
+        "flatpickr": "^4.6.9",
         "notiflix": "^3.2.4"
     }
 }
